xboxdrv 0.4.5 - (??/Jan/2009)
=============================

* fixed mixup between strong and weak rumble
* added Harmonix Drum Kit for Xbox 360

xboxdrv 0.4.4 - (24/Jan/2009)
=============================

* auto-detect USB endpoints
* rumble support, enabled via --force-feedback
* added --rumble-gain to control rumble strength
* --deadzone accepts values in percentage
* DDR Universe 2 Mat added


xboxdrv 0.4.3 - (17/Jan/2009)
=============================

* added support for X11 keysym in --ui-buttonmap
* added --ui-clear and 'void' mappings to unmap buttons and axis
* fixed LED handling for wireless gamepads
* Thrustmaster Firestorm Dual Power support
* added --name option to set device name
* added JS_${NUM} name to address joystick buttons by number instead
  of name
* fixed issue with multiple wireless controller
* some preparation for rumble (prints FF events)


xboxdrv 0.4.2 - (11/Jan/2009)
=============================

* fixed --dpad-only


xboxdrv 0.4.1 - (08/Jan/2009)
=============================

* workaround for KEY_MEDIA_REPEAT


xboxdrv 0.4 - (07/Jan/2009)
===========================

* added --square-axis option
* added --autofire option
* added --relative-axis option (i.e. emulate joystick throttle)
* added --ui-buttonmap and --ui-axismap to change uinput events
* support for keyboard events
* support for mouse emulation


xboxdrv 0.3 - (06/Nov/2008)
============================

* added short note when the USB device is busy
* added note to README about running it via sudo
* added some missing header files
* added new third party controller to the auto-detection
* minor other small bug fixes


xboxdrv 0.2 - (03/May/2008)
===========================

* added support for Xbox360 wireless gamepads
* added support for the Xbox360 guitar controller
* added --dpad-only option for apps that don't need analogsticks
* added --axismap option to remap the axes
* added --buttonmap option to remap the buttons