@@ -5,12 +5,22 @@ Pre Release Testing:
 * --dpad-only check that X/Y act properly
 * --dpad-as-button check buttons are working and no useless axis present
 
-VERSION="0.4.4"
+VERSION="0.4.6"
 TAG="v${VERSION}"
-git tag "${TAG}" -s -a "xboxdrv ${TAG}"
+git tag -s  "${TAG}" -m "xboxdrv ${TAG}" 
 git-archive --format=tar --prefix="xboxdrv-linux-${VERSION}/" ${TAG} | bzip2 -c > /tmp/xboxdrv-linux-${VERSION}.tar.bz2
 git push --tags
 
+Stuff to do before 0.4.6 release:
+=================================
+
+* work in xboxdrv-hal demon to launch things
+
+* Recalibrate: CalibrationModifier
+
+  --calibration X2=min:center:max
+
+
 Stuff to do before 0.5 release:
 ===============================
 
